XMLtoCSV/objects/unpackaged/objects/PCYC_Address_Componsation_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Address Compensation Settings e.g. Approval Reminder triggered days, reminder email tempalate</description>
    <fields>
        <fullName>Approval_Complete_CC__c</fullName>
        <description>Componsation Approval Completed (approved or rejected) CC Addresses (Optional)</description>
        <inlineHelpText>Componsation Approval Completed (approved or rejected) CC Addresses (Optional)</inlineHelpText>
        <label>Approval Complete CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Process__c</fullName>
        <description>Approval Process API Name</description>
        <inlineHelpText>Approval Process API Name</inlineHelpText>
        <label>Approval Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Reminder_CC__c</fullName>
        <description>Componsation Approval Reminder CC Addresses (Optional)</description>
        <inlineHelpText>Componsation Approval Reminder CC Addresses (Optional)</inlineHelpText>
        <label>Approval Reminder CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Reminder_Day__c</fullName>
        <description>Number of days between submitting approval and first approval reminder notification</description>
        <inlineHelpText>Number of days between submitting approval and first approval reminder notification</inlineHelpText>
        <label>Approval Reminder Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Reminder_Template__c</fullName>
        <description>Email Template (API Name) for Approval Reminder</description>
        <inlineHelpText>Email Template (API Name) for Approval Reminder</inlineHelpText>
        <label>Approval Reminder Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approve_Template__c</fullName>
        <description>Email Template (API Name) for approved Compensation</description>
        <inlineHelpText>Email Template (API Name) for approved Compensation</inlineHelpText>
        <label>Approve Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Role_Pattern__c</fullName>
        <description>Manager Role RegExp Pattern</description>
        <inlineHelpText>Manager Role RegExp Pattern</inlineHelpText>
        <label>Manager Role Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Wide_Address__c</fullName>
        <description>Organization-Wide Address used to send email notifications</description>
        <inlineHelpText>Organization-Wide Address used to send email notifications</inlineHelpText>
        <label>Organization-Wide Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Template__c</fullName>
        <description>Email Template (API Name) for rejected Compensation</description>
        <inlineHelpText>Email Template (API Name) for rejected Compensation</inlineHelpText>
        <label>Reject Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Pattern__c</fullName>
        <description>Sales Reps Territory RegExp Pattern</description>
        <inlineHelpText>Sales Reps Territory RegExp Pattern</inlineHelpText>
        <label>Sales Territory Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address Compensation Settings</label>
</CustomObject>